--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -656,6 +656,11 @@ en:
       message_sent_by: "Message sent by"
       message_sent_to: "Message sent to"
       send_reply: "Send reply"
+      send_accept: "Accept"
+      send_cancel: "Cancel"
+      send_undertake: "Undertake"
+      send_complited: "Completed"
+      send_done: "Done"
       write_a_reply: "Write a reply:"
       conversation_about_listing: "With %{person} about %{listing}"
       conversation_with_user: "With %{person}"
