--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1174,6 +1174,10 @@ en:
       all_categories: "All categories"
     errors:
       search_engine_not_responding: "Search is currently unavailable. Try searching again soon."
+    statuses:
+      cancelled: 'cancelled'
+      finished: 'finished'
+      started: 'started'
   infos:
     about:
       default_about_text_title: "What is Sharetribe?"
